--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
 
 <h3>Advantages over Spotify Connect</h3>
 
+<p>SpotCommander can also transfer playback to other devices and control them.</p>
+
 <ul>
 <li>Works without a Premium subscription</li>
-<li>Control both Spotify's volume and the system volume</li>
 <li>Suspend and shut down the computer</li>
 <li>Queue with additional actions, so you can pause, stop, suspend or shut down after tracks in the queue</li>
 <li>Lyrics</li>
@@ -73,7 +74,7 @@
 <li>Many users can control the same Spotify client without being logged in as the same user</li>
 <li>Android app with several extra features (see below)</li>
 <li>Android app widget with more features</li>
-<li>Links to Last.fm, Wikipedia and YouTube</li>
+<li>Links to YouTube, Last.fm and Wikipedia</li>
 <li>Various other features</li>
 </ul>
 
@@ -83,18 +84,19 @@
 <li>Launch and Quit</li>
 <li>Now Playing</li>
 <li>Control playback</li>
-<li>Adjust app volume and system volume</li>
+<li>Transfer playback to other devices and control them*</li>
+<li>Seek in currently playing track*</li>
 <li>Toggle shuffle and repeat</li>
+<li>Adjust volume</li>
 <li>Playlists</li>
 <li>Library</li>
+<li>Browse</li>
 <li>Search</li>
 <li>Artists</li>
 <li>Albums</li>
-<li>Browse</li>
 <li>Recently Played</li>
 <li>Queue with additional actions</li>
 <li>Lyrics</li>
-<li>Start track radio</li>
 <li>Share to social networks</li>
 <li>Touch gestures</li>
 <li>Keyboard shortcuts</li>
@@ -104,6 +106,8 @@
 <li>Responsive design</li>
 <li>Suspend and shut down computer</li>
 </ul>
+
+<p>* means it requires Spotify Premium</p>
 
 <h3>Android app extras</h3>
 
