--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <li>Suspend and shut down computer</li>
 </ul>
 
-<p>* means it requires Spotify Premium</p>
+<p><b>*</b> Means it requires Spotify Premium</p>
 
 <h3>Android app extras</h3>
 
