--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 <li>Launch and Quit</li>
 <li>Now Playing</li>
 <li>Control playback</li>
-<li>Transfer playback to other devices and control them*</li>
-<li>Seek in currently playing track*</li>
+<li>Transfer playback to other devices and control them<b>*</b></li>
+<li>Seek in currently playing track<b>*</b></li>
 <li>Toggle shuffle and repeat</li>
 <li>Adjust volume</li>
 <li>Playlists</li>
