--- a/index.html
+++ b/index.html
@@ -225,12 +225,11 @@
 <h3>Thanks to</h3>
 
 <ul>
-<li><a href="http://jquery.com/">jQuery</a></li>
-<li><a href="https://github.com/carlo/jquery-base64">jQuery base64 plugin</a></li>
-<li><a href="https://github.com/carhartl/jquery-cookie">jQuery cookies plugin</a></li>
-<li><a href="https://github.com/danro/jquery-easing">jQuery easing plugin</a></li>
-<li><a href="http://modernizr.com/">Modernizr</a></li>
-<li><a href="http://craig.is/killing/mice">Mousetrap</a></li>
+<li><a href="https://github.com/dankogai/js-base64">base64.js</a></li>
+<li><a href="https://github.com/js-cookie/js-cookie">JavaScript Cookie</a></li>
+<li><a href="http://github.com/jquery/jquery">jQuery</a></li>
+<li><a href="https://github.com/modernizr/modernizr">Modernizr</a></li>
+<li><a href="http://github.com/ccampbell/mousetrap">Mousetrap</a></li>
 <li><a href="http://www.last.fm/">Last.fm</a></li>
 <li><a href="https://github.com/afollestad/material-dialogs">Material Dialogs</a></li>
 </ul>
