--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 <li><a href="http://github.com/jquery/jquery">jQuery</a></li>
 <li><a href="https://github.com/modernizr/modernizr">Modernizr</a></li>
 <li><a href="http://github.com/ccampbell/mousetrap">Mousetrap</a></li>
-<li><a href="http://www.last.fm/">Last.fm</a></li>
+<li><a href="https://www.last.fm/">Last.fm</a></li>
 <li><a href="https://github.com/afollestad/material-dialogs">Material Dialogs</a></li>
 </ul>
 
