--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
 
 <h3>What users think</h3>
 
+<p><em>Excellent! I reverted to the old Spotify version and it works flawlessly. Next paycheck I'll be donating! It's fantastic! Thank you so much!</em><br>
+- Calipanhead</p>
+
+<p><em>Very good app. I use it on Ubuntu 14.04 and Samsung S6.</em><br>
+- Luigi</p>
+
+<p><em>Just brilliant. Never has an app given me more than I asked for. It's got lyrics, your whole Spotify profile and everything. Wonderful. Just wonderful. I am sorry I can't make a donation since I am broke myself (college student), but I am sending my love. Keep up the great work.</em><br>
+- Rahul</p>
+
 <p><em>Love this app. Really good!</em><br>
 - Stephan</p>
 
