--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 
 <h3>Screenshots</h3>
 
+<p>These are a little bit outdated right now, but the latest version is very similar to these.</p>
+
 <p>
 <a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-1"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-1-small.png?12" alt="Image"></a>
 <a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-2"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-2-small.png?12" alt="Image"></a>
