--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <h3>Get it</h3>
 
 <ul>
-<li><a href="http://www.olejon.net/code/spotcommander/?download"><b>Download SpotCommander</b></a></li>
-<li><a href="http://www.olejon.net/code/spotcommander/?android_app"><b>Download Android app on Google Play</b></a></li>
+<li><a href="http://www.olejon.net/code/spotcommander/?download"><b>First download SpotCommander</b></a></li>
+<li><a href="http://www.olejon.net/code/spotcommander/?android_app"><b>Then download Android app if Android user</b></a></li>
 </ul>
 
 <p>Having any issues? <a href="http://www.olejon.net/code/spotcommander/?issues" target="_blank">Please report them here</a>. You can also email me at mail at olejon dot net.</p>
