--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0">
 
-<link rel="shortcut icon" href="http://www.olejon.net/code/spotcommander/img/favicon.ico">
+<link rel="shortcut icon" href="https://www.olejon.net/code/spotcommander/img/favicon.ico">
 
 <link rel="stylesheet" href="stylesheets/styles.css">
 
@@ -22,13 +22,13 @@
 
 <header>
 
-<div style="padding: 0 0 8px 0"><img src="http://www.olejon.net/code/spotcommander/img/favicon.png" alt="Image" style="width: 64px; height: 64px"></div>
+<div style="padding: 0 0 8px 0"><img src="https://www.olejon.net/code/spotcommander/img/favicon.png" alt="Image" style="width: 64px; height: 64px"></div>
 
 <h1>SpotCommander</h1>
 
 <p>The most intuitive and feature-rich remote control for Spotify for Linux</p>
 
-<p><a href="http://www.olejon.net/code/spotcommander/?donate" target="_blank"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Image"></a></p>
+<p><a href="https://www.olejon.net/code/spotcommander/?donate" target="_blank"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Image"></a></p>
 
 <p><a href="https://flattr.com/submit/auto?fid=3p1kgw&url=http%3A%2F%2Folejon.github.io%2Fspotcommander%2F" target="_blank"><img src="https://button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this"></a></p>
 
@@ -49,16 +49,16 @@
 <h3>Get it</h3>
 
 <ul>
-<li><a href="http://www.olejon.net/code/spotcommander/?download"><b>First download SpotCommander</b></a></li>
-<li><a href="http://www.olejon.net/code/spotcommander/?android_app"><b>Then download Android app if Android user</b></a></li>
+<li><a href="https://www.olejon.net/code/spotcommander/?download"><b>First download SpotCommander</b></a></li>
+<li><a href="https://www.olejon.net/code/spotcommander/?android_app"><b>Then download Android app if Android user</b></a></li>
 </ul>
 
-<p>Having any issues? <a href="http://www.olejon.net/code/spotcommander/?issues" target="_blank">Please report them here</a>. You can also email me at mail at olejon dot net.</p>
+<p>Having any issues? <a href="https://www.olejon.net/code/spotcommander/?issues" target="_blank">Please report them here</a>. You can also email me at mail at olejon dot net.</p>
 
 <h3>Known issues</h3>
 
 <ul>
-<li><a href="http://www.olejon.net/code/spotcommander/?issues" target="_blank">Click here to see known issues</a></li>
+<li><a href="https://www.olejon.net/code/spotcommander/?issues" target="_blank">Click here to see known issues</a></li>
 </ul>
 
 <h3>Advantages over Spotify Connect</h3>
@@ -129,17 +129,17 @@
 <p>These are a little bit outdated right now, but the latest version is very similar to these.</p>
 
 <p>
-<a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-1"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-1-small.png?12" alt="Image"></a>
-<a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-2"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-2-small.png?12" alt="Image"></a>
-<a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-3"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-3-small.png?12" alt="Image"></a>
-<a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-4"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-4-small.png?12" alt="Image"></a>
-<a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-5"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-5-small.png?12" alt="Image"></a>
-<a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-6"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-6-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-1"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-1-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-2"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-2-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-3"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-3-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-4"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-4-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-5"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-5-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-6"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-6-small.png?12" alt="Image"></a>
 </p>
 
 <p>
-<a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-tablet-10-1"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-tablet-10-1-small.png?12" alt="Image"></a>
-<a href="http://www.olejon.net/code/spotcommander/?screenshot=screenshot-tablet-10-2"><img src="http://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-tablet-10-2-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-tablet-10-1"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-tablet-10-1-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-tablet-10-2"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-tablet-10-2-small.png?12" alt="Image"></a>
 </p>
 
 <h3>What users think</h3>
@@ -223,8 +223,8 @@
 <p>SpotCommander is non-commercial free software with open source code.</p>
 
 <ul>
-<li><a href="http://www.olejon.net/code/spotcommander/?source_code" target="_blank">Source code</a></li>
-<li><a href="http://www.olejon.net/code/spotcommander/?license" target="_blank">License</a></li>
+<li><a href="https://www.olejon.net/code/spotcommander/?source_code" target="_blank">Source code</a></li>
+<li><a href="https://www.olejon.net/code/spotcommander/?license" target="_blank">License</a></li>
 </ul>
 
 <h3>Thanks to</h3>
@@ -232,18 +232,18 @@
 <ul>
 <li><a href="https://github.com/dankogai/js-base64">base64.js</a></li>
 <li><a href="https://github.com/js-cookie/js-cookie">JavaScript Cookie</a></li>
-<li><a href="http://github.com/jquery/jquery">jQuery</a></li>
+<li><a href="https://github.com/jquery/jquery">jQuery</a></li>
 <li><a href="https://github.com/modernizr/modernizr">Modernizr</a></li>
-<li><a href="http://github.com/ccampbell/mousetrap">Mousetrap</a></li>
-<li><a href="https://www.last.fm/">Last.fm</a></li>
+<li><a href="https://github.com/ccampbell/mousetrap">Mousetrap</a></li>
 <li><a href="https://github.com/afollestad/material-dialogs">Material Dialogs</a></li>
+<li><a href="https://www.last.fm/">Last.fm</a></li>
 </ul>
 
 <h3>Disclaimer</h3>
 
 <p>This product uses a Spotify API but is not endorsed, certified or otherwise approved in any way by Spotify. Spotify is the registered trade mark of the Spotify Group.</p>
 
-<p>Copyright 2017 Ole Jon Bjørkum - <a href="http://www.olejon.net/code/spotcommander/?olejondotnet">OleJon.net</a></p>
+<p>Copyright 2017 Ole Jon Bjørkum - <a href="https://www.olejon.net/code/spotcommander/?olejondotnet">OleJon.net</a></p>
 
 </section>
 
