--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <h3>Get it</h3>
 
 <ul>
-<li><a href="https://www.olejon.net/code/spotcommander/?download"><b>First download SpotCommander</b></a></li>
-<li><a href="https://www.olejon.net/code/spotcommander/?android_app"><b>Then download Android app if Android user</b></a></li>
+<li><a href="https://www.olejon.net/code/spotcommander/?download target="_blank""><b>First download SpotCommander</b></a></li>
+<li><a href="https://www.olejon.net/code/spotcommander/?android_app target="_blank""><b>Then download Android app if Android user</b></a></li>
 </ul>
 
 <p>Having any issues? <a href="https://www.olejon.net/code/spotcommander/?issues" target="_blank">Please report them here</a>. You can also email me at mail at olejon dot net.</p>
@@ -129,17 +129,17 @@
 <p>These are a little bit outdated right now, but the latest version is very similar to these.</p>
 
 <p>
-<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-1"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-1-small.png?12" alt="Image"></a>
-<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-2"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-2-small.png?12" alt="Image"></a>
-<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-3"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-3-small.png?12" alt="Image"></a>
-<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-4"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-4-small.png?12" alt="Image"></a>
-<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-5"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-5-small.png?12" alt="Image"></a>
-<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-6"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-6-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-1" target="_blank"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-1-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-2" target="_blank"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-2-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-3" target="_blank"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-3-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-4" target="_blank"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-4-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-5" target="_blank"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-5-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-phone-6" target="_blank"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-phone-6-small.png?12" alt="Image"></a>
 </p>
 
 <p>
-<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-tablet-10-1"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-tablet-10-1-small.png?12" alt="Image"></a>
-<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-tablet-10-2"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-tablet-10-2-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-tablet-10-1" target="_blank"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-tablet-10-1-small.png?12" alt="Image"></a>
+<a href="https://www.olejon.net/code/spotcommander/?screenshot=screenshot-tablet-10-2" target="_blank"><img src="https://www.olejon.net/code/spotcommander/img/screenshots/latest/screenshot-tablet-10-2-small.png?12" alt="Image"></a>
 </p>
 
 <h3>What users think</h3>
@@ -230,26 +230,26 @@
 <h3>Thanks to</h3>
 
 <ul>
-<li><a href="https://github.com/dankogai/js-base64">base64.js</a></li>
-<li><a href="https://github.com/js-cookie/js-cookie">JavaScript Cookie</a></li>
-<li><a href="https://github.com/jquery/jquery">jQuery</a></li>
-<li><a href="https://github.com/modernizr/modernizr">Modernizr</a></li>
-<li><a href="https://github.com/ccampbell/mousetrap">Mousetrap</a></li>
-<li><a href="https://github.com/afollestad/material-dialogs">Material Dialogs</a></li>
-<li><a href="https://www.last.fm/">Last.fm</a></li>
+<li><a href="https://github.com/dankogai/js-base64" target="_blank">base64.js</a></li>
+<li><a href="https://github.com/js-cookie/js-cookie" target="_blank">JavaScript Cookie</a></li>
+<li><a href="https://github.com/jquery/jquery" target="_blank">jQuery</a></li>
+<li><a href="https://github.com/modernizr/modernizr" target="_blank">Modernizr</a></li>
+<li><a href="https://github.com/ccampbell/mousetrap" target="_blank">Mousetrap</a></li>
+<li><a href="https://github.com/afollestad/material-dialogs" target="_blank">Material Dialogs</a></li>
+<li><a href="https://www.last.fm/" target="_blank">Last.fm</a></li>
 </ul>
 
 <h3>Disclaimer</h3>
 
 <p>This product uses a Spotify API but is not endorsed, certified or otherwise approved in any way by Spotify. Spotify is the registered trade mark of the Spotify Group.</p>
 
-<p>Copyright 2017 Ole Jon Bjørkum - <a href="https://www.olejon.net/code/spotcommander/?olejondotnet">OleJon.net</a></p>
+<p>Copyright 2017 Ole Jon Bjørkum - <a href="https://www.olejon.net/code/spotcommander/?olejondotnet" target="_blank">OleJon.net</a></p>
 
 </section>
 
 <footer>
 
-<p>This project is maintained by <a href="https://github.com/olejon">olejon</a></p>
+<p>This project is maintained by <a href="https://github.com/olejon" target="_blank">olejon</a></p>
 
 </footer>
 
