--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 
 <section>
 
-<p>SpotCommander is a remote control for Spotify for Linux, optimized for mobile devices. It works on any device with a modern browser, and it's free and open source.</p>
-
-<p>SpotCommander is the most elegant, intuitive, feature-rich and universal remote control for Spotify, exclusive for Linux users!</p>
+<p>The most intuitive and feature-rich remote control for Spotify for Linux</p>
 
 <p><b>Yes, it works without a Premium subscription!</b></p>
 
