--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <h1>SpotCommander</h1>
 
-<p>The most intuitive and feature-rich remote control for Spotify for Linux</p>
+<p>The most intuitive and feature-rich remote control for Spotify for Linux.</p>
 
 <p><a href="https://www.olejon.net/code/spotcommander/?donate" target="_blank"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Image"></a></p>
 
