--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 <h3>About</h3>
 
-<p>SpotCommander is non-commercial free software with open source code.</p>
+<p>SpotCommander is non-commercial free software with open source code and uses of content freely available on the Internet.</p>
 
 <ul>
 <li><a href="https://www.olejon.net/code/spotcommander/?source_code" target="_blank">Source code</a></li>
