--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <section>
 
-<p>The most intuitive and feature-rich remote control for Spotify for Linux.</p>
+<p>The most intuitive and feature-rich remote control for Spotify for Linux, NOT Windows or Mac OS X.</p>
 
 <p><b>Yes, it works without a Premium subscription!</b></p>
 
