--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
 <h3>Disclaimer</h3>
 
-<p>This product uses a Spotify API but is not endorsed, certified or otherwise approved in any way by Spotify. Spotify is the registered trade mark of the Spotify Group.</p>
+<p>This product is not developed, endorsed or certified in any way by Spotify. Spotify is the registered trade mark of the Spotify Group.</p>
 
 <p>Copyright 2017 Ole Jon Bjørkum - <a href="https://www.olejon.net/code/spotcommander/?olejondotnet" target="_blank">OleJon.net</a></p>
 
