--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <header>
 
-<div style="padding: 0 0 8px 0"><img src="https://www.olejon.net/code/spotcommander/img/favicon.png" alt="Image" style="width: 64px; height: 64px"></div>
+<div style="padding: 0 0 8px 0"><img src="https://www.olejon.net/code/spotcommander/img/favicon.png?12" alt="Image" style="width: 64px; height: 64px"></div>
 
 <h1>SpotCommander</h1>
 
