--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0">
 
-<link rel="shortcut icon" href="https://www.olejon.net/code/spotcommander/img/favicon.ico">
+<link rel="shortcut icon" href="https://www.olejon.net/code/spotcommander/img/favicon.ico?12">
 
 <link rel="stylesheet" href="stylesheets/styles.css">
 
