--- a/index.html
+++ b/index.html
@@ -219,13 +219,11 @@
 <li><a href="https://github.com/afollestad/material-dialogs" target="_blank">Material Dialogs</a></li>
 </ul>
 
-<p>Copyright 2019 Ole Jon Bjørkum - <a href="https://www.olejon.net/code/spotcommander/?olejondotnet" target="_blank">OleJon.net</a></p>
-
 </section>
 
 <footer>
 
-<p>This project is maintained by <a href="https://github.com/olejon" target="_blank">olejon</a></p>
+<p>This project is maintained by <a href="https://github.com/olejon">olejon</a></p>
 
 </footer>
 
